--- a/style.css
+++ b/style.css
@@ -520,3 +520,169 @@ footer {
   text-align: center;
 }
 
+
+
+/* O nama */
+.about-hero {
+  background: url('./images/about-bg.jpg') no-repeat center center/cover;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.about-hero-content {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+.about-hero-content h1 {
+  font-size: 4rem;
+  color: #A38560;
+  font-family: 'Playfair Display', serif;
+  margin-bottom: 1rem;
+}
+
+.about-hero-content p {
+  font-size: 1.5rem;
+  color: #f5f5f5;
+}
+
+/* Glavni tekst + galerija */
+.about-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem 2rem;
+  background-color: #000000;
+  color: #f5f5f5;
+}
+
+.about-text {
+  max-width: 800px;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.about-text h2 {
+  color: #A38560;
+  margin-bottom: 1.5rem;
+  font-size: 2.5rem;
+}
+
+.about-text p {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+.about-gallery {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.about-gallery img {
+  width: 250px;
+  height: auto;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.about-gallery img:hover {
+  transform: scale(1.05);
+}
+
+.nasa-prica-pozadina {
+  background: url('images/pozadina1.png') no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: -10vh;
+}
+
+.nasa-prica-pozadina .hero-content {
+  color: #fff;
+  font-family: 'Playfair Display', serif;
+}
+
+.nasa-prica-pozadina h1 {
+  font-size: 5rem;
+  letter-spacing: 0.3rem;
+  margin-bottom: 1rem;
+}
+
+.nasa-prica-pozadina p {
+  font-size: 1.5rem;
+  color: #ccc;
+}
+
+
+
+
+
+.contact {
+  background: url('images/pozadina1.png') no-repeat center center/cover;
+  padding: 4rem 2rem;
+  color: #f5f5f5;
+  text-align: center;
+}
+
+.contact-content h2 {
+  font-size: 2.5rem;
+  color: #A38560;
+  margin-bottom: 1rem;
+}
+
+.contact-content p {
+  font-size: 1.1rem;
+  margin-bottom: 2rem;
+}
+
+.contact-wrapper {
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.map-container {
+  flex: 1 1 300px;
+  max-width: 600px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.contact-form {
+  flex: 1 1 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 500px;
+  margin-top: 1rem;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 0.75rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #1c1c1c;
+  color: #fff;
+  font-family: inherit;
+}
+
+.contact-form input::placeholder,
+.contact-form textarea::placeholder {
+  color: #aaa;
+}
+
+.contact-form button {
+  align-self: flex-start;
+}
+
